correction of the text description

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 			<div class="w3-container">
 
 					<div class="w3-card-4" style="width:90%">
-				<img src="./images/lmda1.jpg" alt="capture d'ecran du site La Maison des artistes" style="width:50%">
-					<p class="textP">Création du site LMDA(La Maison des Artistes)réaliser par la formation simplon  pour le lycée Hyacinthe Bastaraud, dans le cadre du projet entreprendre au lycée  </p>	  
-					<a href="https://lamaisondesartistes.github.io/ProjetLMDA/#/" target="maSection">Cliquez ici</a>
+				<a href="https://lamaisondesartistes.github.io/ProjetLMDA/#/" target="maSection"><img src="./images/lmda1.jpg" alt="capture d'ecran du site La Maison des artistes" style="width:50%"></a>
+					<p class="textP">Création du site LMDA (La Maison des Artistes) réaliser par la formation simplon  pour le lycée Hyacinthe Bastaraud, dans le cadre du projet entreprendre au lycée  </p>	  
+					
 
 				</div>
 
@@ -73,9 +73,9 @@
 			  <div class="w3-container">
 
 				<div class="w3-card-4" style="width:90%">
-			<img src="./images/médiaQueries.png" alt="capture d'ecran du site média Queries exo" style="width:50%">
+			<a href="https://leevan97112.github.io/html-css/" target="maSection"><img src="./images/médiaQueries.png" alt="capture d'ecran du site média Queries exo" style="width:50%"></a>
 				<p class="textP"> Exercice de page responsive pour qu'il soit adaptable a t ous type d'écran . </p>	  
-				<a href="https://leevan97112.github.io/html-css/" target="maSection">Cliquez ici</a>
+				
 
 			</div>
 
@@ -139,7 +139,7 @@
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-comments"></i>
-                            <h4>Vendeurs</h4>
+                            <h4>Vendeur</h4>
                             <h5>Vente, accueil,<br> réaprovisionnement <br>  des rayons</h5>
                         </div>
                     </div><!--/.col-md-4-->
